--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Peer-to-peer trade site for those hard-to-find board game pieces.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production && webpack && node server/server.js",
+    "start": "cross-env NODE_ENV=production webpack && node server/server.js",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --hot --open\" \"nodemon server/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
