--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.1.0",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -39,15 +40,18 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.0",
     "prettier": "^2.0.5",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.3.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1"
   }
 }
