--- a/package.json
+++ b/package.json
@@ -44,8 +44,13 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "connect-pg-simple": "^6.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
