refactor(UI): convert to React-Bootstrap + React-Router

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
           }
       ],
       "react/function-component-definition": [
-          "off",
+          "error",
           {
               "namedComponents": "arrow-function",
               "unnamedComponents": "arrow-function"
