--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg": "^8.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
