--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
     "pg": "^8.3.0",
